--- a/public/index.html
+++ b/public/index.html
@@ -82,7 +82,7 @@
             <div class="flex flex-wrap">
                 <div class="w-full px-4 mb-10 lg:w-1/2">
                     <h4 class="font-bold font-sans text-primary text-lg mb-4">Tentang saya</h4>
-                    <h2 class="font-semibold text-dark text-3xl mb-5 max-w-md">Si bocah SMP</h2>
+                    <h2 class="font-semibold text-dark text-3xl mb-5 max-w-md">Si Tukang Rebahan</h2>
                     <p class="font-medium text-base text-secondary max-w-xl lg:text-lg">Anak ketiga sekaligus anak bungsu yang dilahirkan di Bali, pada bulan September tahun 2006. Hobby nya bermain futsal, yang bercita-cita menjadi orang sukses. Sukses dalam artian hidup sejahtera dan bahagia.</p>
                 </div>
                 <div class="w-full px-4 lg:w-1/2">
@@ -126,7 +126,7 @@
                 <div class="max-w-xl mx-auto text-center mb-16">
                     <h4 class="font-semibold text-lg text-primary mb-2">Blog</h4>
                     <h2 class="font-bold text-dark text-3xl mb-4 sm:text-4xl lg:text-5xl">Tulisan Terbaru</h2>
-                    <p class="font-medium text-md text-secondary md:text-lg">Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum minima fugiat obcaecati sint.</p>
+                    <p class="font-medium text-md text-secondary md:text-lg">Disclaimer, blog ini diambil dari seorang dosen yang bernama Sandhika Galih.</p>
                 </div>
             </div>
 
@@ -138,7 +138,7 @@
                             <h3>
                                 <a href="#" class="block mb-3 font-semibold text-dark hover:text-primary truncate">Pecinta Kopi</a>
                             </h3>
-                            <p class="font-medium text-base text-secondary mb-6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, eius!</p>
+                            <p class="font-medium text-base text-secondary mb-6">Secangkir minuman yg membuat nyaman dikala kantuk menyerang.</p>
 
                             <a href="#" class="font-medium text-sm text-white bg-primary py-2 px-4 rounded-lg hover:opacity-80">Baca selengkapnya</a>
                         </div>
@@ -152,7 +152,7 @@
                             <h3>
                                 <a href="#" class="block mb-3 font-semibold text-dark hover:text-primary truncate">Jendela Dunia</a>
                             </h3>
-                            <p class="font-medium text-base text-secondary mb-6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, eius!</p>
+                            <p class="font-medium text-base text-secondary mb-6">Setumpuk kertas dibawah goresan tinta, yang menjadi jawaban dari segala pertanyaan.</p>
 
                             <a href="#" class="font-medium text-sm text-white bg-primary py-2 px-4 rounded-lg hover:opacity-80">Baca selengkapnya</a>
                         </div>
@@ -166,7 +166,7 @@
                             <h3>
                                 <a href="#" class="block mb-3 font-semibold text-dark hover:text-primary truncate">Berbagai Makanan Lezat</a>
                             </h3>
-                            <p class="font-medium text-base text-secondary mb-6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, eius!</p>
+                            <p class="font-medium text-base text-secondary mb-6">Bahan organik yg sebagai syarat utama kelangsungan hidup.</p>
 
                             <a href="#" class="font-medium text-sm text-white bg-primary py-2 px-4 rounded-lg hover:opacity-80">Baca selengkapnya</a>
                         </div>
@@ -186,7 +186,7 @@
                 <div class="max-w-xl mx-auto text-center mb-16">
                     <h4 class="font-semibold text-lg text-primary mb-2">Contact</h4>
                     <h2 class="font-bold text-dark text-3xl mb-4 sm:text-4xl lg:text-5xl">Hubungi Saya</h2>
-                    <p class="font-medium text-md text-secondary md:text-lg">Lorem ipsum dolr sit amet consectetur adipisicing elit. Harum minima fugiat obcaecati sint.</p>
+                    <p class="font-medium text-md text-secondary md:text-lg">Sebenarnya kolom ini tidak berfungsi. Jika perlu, hubungi pada email atau sosial media saya yg tertera disini.</p>
                 </div>
             </div>
 
