--- a/public/index.html
+++ b/public/index.html
@@ -52,11 +52,11 @@
             <div class="flex flex-wrap">
 
                 <div class="w-full self-center px-4 lg:absolute lg:right-0 lg:w-1/2">
-                    <h1 class="text-base font-semibold text-primary md:text-xl lg:text-3xl">Hallo 👋, saya.., <span class="block font-bold text-dark text-4xl mt-1 lg:text-5xl">Dimas Wira Bakti</span></h1>
-                    <h2 class="font-medium text-secondary text-lg mb-5 lg:text-2xl">&rarr; Pelajar <span class="text-primary">&</span> <span class="text-dark">Balinese people🕉</span></h2>
+                    <h1 class="text-base font-semibold text-primary md:text-xl lg:text-3xl">Hallo 👋, saya..<span class="block font-bold text-dark text-4xl mt-1 lg:text-5xl">Dimas Wira Bakti</span></h1>
+                    <h2 class="font-medium text-secondary text-lg mb-5 lg:text-2xl">&rarr; Pelajar <span class="text-primary">&</span> <span class="text-dark">Balinese🕉</span></h2>
                     <p class="font-medium text-secondary mb-10 leading-relaxed">Jika semua orang merasa <span class="text-dark font-bold">TIDAK ADIL,</span> <span class="text-dark">bukankah</span> itu <span class="text-primary font-bold">ADIL?</span></p>
 
-                    <a href="#" class="text-base font-semibold text-white bg-primary py-3 px-8 rounded-full hover:shadow-lg hover:opacity-80 transition duration-300 ease-in-out">Contact Me</a>
+                    <a href="#contact" class="text-base font-semibold text-white bg-primary py-3 px-8 rounded-full hover:shadow-lg hover:opacity-80 transition duration-300 ease-in-out">Contact Me</a>
                 </div>
                 
                 <div class="w-full self-end px-4 mt-10 lg:w-1/2">
@@ -186,7 +186,7 @@
                 <div class="max-w-xl mx-auto text-center mb-16">
                     <h4 class="font-semibold text-lg text-primary mb-2">Contact</h4>
                     <h2 class="font-bold text-dark text-3xl mb-4 sm:text-4xl lg:text-5xl">Hubungi Saya</h2>
-                    <p class="font-medium text-md text-secondary md:text-lg">Sebenarnya kolom ini tidak berfungsi. Jika perlu, hubungi pada email atau sosial media saya yg tertera disini.</p>
+                    <p class="font-medium text-md text-secondary md:text-lg">Sebenarnya kolom ini tidak berfungsi. Jika perlu, hubungi pada email atau sosial media saya yg tertera di situs ini.</p>
                 </div>
             </div>
 
