--- a/public/index.html
+++ b/public/index.html
@@ -52,7 +52,7 @@
             <div class="flex flex-wrap">
 
                 <div class="w-full self-center px-4 lg:absolute lg:right-0 lg:w-1/2">
-                    <h1 class="text-base font-semibold text-primary md:text-xl lg:text-3xl">Hallo 👋, saya..<span class="block font-bold text-dark text-3xl mt-1 lg:text-4xl">Dimas Wira Bakti</span></h1>
+                    <h1 class="text-base font-semibold text-primary md:text-xl lg:text-3xl">Hallo 👋, saya..<span class="block font-bold text-dark text-3xl mt-1 lg:text-5xl">Dimas Wira Bakti</span></h1>
                     <h2 class="font-medium text-secondary text-lg mb-5 lg:text-2xl">&rarr; Pelajar <span class="text-primary">&</span> <span class="text-dark">Balinese🕉</span></h2>
                     <p class="font-medium text-secondary mb-10 leading-relaxed">Jika semua orang merasa <span class="text-dark font-bold">TIDAK ADIL,</span> <span class="text-dark">bukankah</span> itu <span class="text-primary font-bold">ADIL?</span></p>
 
@@ -82,8 +82,8 @@
             <div class="flex flex-wrap">
                 <div class="w-full px-4 mb-10 lg:w-1/2">
                     <h4 class="font-bold font-sans text-primary text-lg mb-4">Tentang saya</h4>
-                    <h2 class="font-semibold text-dark text-3xl mb-5 max-w-md">Si Tukang Rebahan</h2>
-                    <p class="font-medium text-base text-secondary max-w-xl lg:text-lg">Anak ketiga sekaligus anak bungsu yang dilahirkan di Bali, pada bulan September tahun 2006. Hobby nya bermain futsal, yang bercita-cita menjadi orang sukses. Sukses dalam artian hidup sejahtera dan bahagia.</p>
+                    <h2 class="font-semibold text-dark text-2xl mb-5 max-w-md lg:text-3xl">Junior High School</h2>
+                    <p class="font-medium text-base text-secondary max-w-xl lg:text-lg">Anak ketiga sekaligus anak bungsu yang dilahirkan di Bali, pada bulan September tahun 2006. Hobi main futsal, yang bercita-cita menjadi orang sukses. Sukses dalam artian hidup sejahtera dan bahagia.</p>
                 </div>
                 <div class="w-full px-4 lg:w-1/2">
                     <h4 class="font-semibold font-sans text-primary text-lg mb-4">Ayo berteman</h4>
@@ -186,7 +186,7 @@
                 <div class="max-w-xl mx-auto text-center mb-16">
                     <h4 class="font-semibold text-lg text-primary mb-2">Contact</h4>
                     <h2 class="font-bold text-dark text-3xl mb-4 sm:text-4xl lg:text-5xl">Hubungi Saya</h2>
-                    <p class="font-medium text-md text-secondary md:text-lg">Sebenarnya kolom ini tidak berfungsi. Jika perlu, hubungi pada email atau sosial media saya yg tertera di situs ini.</p>
+                    <p class="font-medium text-md text-secondary md:text-lg">Kolom ini tidak berfungsi. Jika perlu, hubungi pada email atau sosial media saya yg tertera di situs ini.</p>
                 </div>
             </div>
 
