--- a/public/index.html
+++ b/public/index.html
@@ -83,7 +83,8 @@
                 <div class="w-full px-4 mb-10 lg:w-1/2">
                     <h4 class="font-bold font-sans text-primary text-lg mb-4">Tentang saya</h4>
                     <h2 class="font-semibold text-dark text-2xl mb-5 max-w-md lg:text-3xl">Junior High School</h2>
-                    <p class="font-medium text-base text-secondary max-w-xl lg:text-lg">Anak ketiga sekaligus anak bungsu yang dilahirkan di Bali, pada bulan September tahun 2006. Hobi main futsal, yang bercita-cita menjadi orang sukses. Sukses dalam artian hidup sejahtera dan bahagia.</p>
+                    <p class="font-medium text-base text-secondary max-w-xl lg:text-lg">Anak ketiga sekaligus anak bungsu yang dilahirkan di Bali, pada bulan September tahun 2006. Hobi main futsal, yang bercita-cita menjadi orang sukses. Sukses dalam artian hidup sejahtera dan bahagia. Kehidupan ku yang dulu berbeda dengan yang sekarang karena aku bertemu dengan orang tercantik seduniaa. Orang ini sangat mengubah kehidupanku yang sebelumnya biasa saja menjadi sangat berwana. -Sintya♡ </p>
+                
                 </div>
                 <div class="w-full px-4 lg:w-1/2">
                     <h4 class="font-semibold font-sans text-primary text-lg mb-4">Ayo berteman</h4>
